# noarr-pipelines

./: .gitignore  README.md
.github/workflows/: noarr_test_macosl.yml  noarr_test_ubuntul_clang.yml  noarr_test_ubuntul_gcc.yml  noarr_test_win.yml
bindings/: .gitignore  README.md  build.cmd  build.sh  build_dummy.cmd  build_dummy.sh  expected.txt  matrix_multiply.R  matrix_multiply.cu  matrix_multiply.py  matrix_multiply_dummy.cpp  tutorial.md
bindings/R-bindings/: .gitignore  DESCRIPTION  NAMESPACE  README.md  build.cmd  build.sh  create_matrix.cpp  example.R  load.R  matrix_multiply.R  matrix_multiply.cu  pack_cran.sh
bindings/R-bindings/R/: matrix.R  noarr_matrix.R
bindings/R-bindings/data/: matrix32.data  matrix64.data  matrix96.data
bindings/R-bindings/src/: matrix.cpp  noarr_matrix.cpp
docs/: README.md  compute-node.md  core-principles-rework.md  core-principles.md  cuda-pipelines.md  hardware-manager.md  hub-reworked.md  hub.md  scheduler.md  structures-in-pipelines.md  stuff-to-be-placed.md
examples/: NOTES.md  README.md  autobalance.md  bitcoin.md  sobel.md
examples/kmeans/: .gitignore  CMakeLists.txt  README.md  kmeans.cpp  main.cpp  main.cu
examples/kmeans/include/: kernels.cu  kernels.hpp  kmeans.cpp  point_t.hpp  structures.hpp  utilities.cpp
examples/upcase/: .gitignore  CMakeLists.txt  README.md  main.cpp
examples/uppercase/: .gitignore  CMakeLists.txt  README.md  input.txt  main.cpp  main.cu
include/noarr/: cuda-pipelines.hpp  pipelines.hpp  structures-pipelines.hpp
include/noarr/cuda-pipelines/: CudaAllocator.hpp  CudaComputeNode.hpp  CudaPipelines.hpp  CudaTransferer.hpp  LambdaCudaComputeNode.hpp  NOARR_CUCH.hpp  foo.hpp
include/noarr/pipelines/: AsyncComputeNode.hpp  Buffer.hpp  ComputeNode.hpp  DebuggingScheduler.hpp  Device.hpp  DummyGpuAllocator.hpp  Envelope.hpp  HardwareManager.hpp  HostAllocator.hpp  Hub.hpp  Hub_Chunk.hpp  Link.hpp  MemoryAllocator.hpp  MemoryTransferer.hpp  NOARR_UNUSED.hpp  Node.hpp  README.md  Scheduler.hpp  SimpleScheduler.hpp  UntypedEnvelope.hpp
include/noarr/structures-pipelines/: README.md  bag_from_envelope.hpp  bag_from_link.hpp
noarr/: CMakeLists.txt
noarr/include/noarr/pipelines/: Link.hpp
tests/: README.md
tests/cuda-pipelines/: .gitignore  CMakeLists.txt  README.md
tests/cuda-pipelines/tests/: README.md  foo_test.cpp
tests/cuda-pipelines/tests/cuda_compute_node/: cuda_compute_node_test.cpp  my_kernel.cu  my_kernel.hpp
tests/cuda-pipelines/tests/plain_kernel_gcc/: README.md  plain_kernel.cu  plain_kernel.hpp  plain_kernel_test.cpp
tests/cuda-pipelines/tests/plain_kernel_nvcc/: README.md  plain_kernel.cu  plain_kernel_test.cu
tests/pipelines/: CMakeLists.txt  README.md  main_test.cpp
tests/pipelines/tests/: README.md  async_compute_node_test.cpp  buffer_test.cpp  given_buffer_test.cpp  hub_peeking_with_transfer_test.cpp  memory_sync_transfer_test.cpp  memory_transfer_test.cpp  producer_filter_consumer_test.cpp  producer_modifier_consumer_test.cpp
tests/pipelines/tests/world_simulation/: README.md  world_simulation.hpp  world_simulation_test.cpp
